Forced miniBio length up to 140 characters

--- a/app/assets/javascripts/templates/user/followers.hbs
+++ b/app/assets/javascripts/templates/user/followers.hbs
@@ -20,7 +20,7 @@
         <div class="user-info">
           <h4>{{#link-to 'user' username}}{{username}}{{/link-to}}</h4>
           <p class="mini-bio">
-            {{miniBio}}
+            {{miniBio140}}
             {{controller.followerCoverUrl}}
           </p>
         </div>
