Restore quick update panel

--- a/app/assets/javascripts/templates/header.hbs
+++ b/app/assets/javascripts/templates/header.hbs
@@ -57,7 +57,7 @@
     </ul>
 
 
-    {{!-- <ul class="nav navbar-nav navbar-permanent navbar-permanent-left">
+    <ul class="nav navbar-nav navbar-permanent navbar-permanent-left">
       <li>
         {{#if allowQuickUpdate}}
           {{#if showUpdater}}
@@ -67,7 +67,7 @@
           {{/if}}
         {{/if}}
       </li>
-    </ul> --}}
+    </ul>
 
     <ul class='nav navbar-nav navbar-right navbar-permanent navbar-permanent-right'>
       {{partial "header/right-content"}}
