Add button to trigger site_update notification

--- a/app/assets/javascripts/templates/kotodama.hbs
+++ b/app/assets/javascripts/templates/kotodama.hbs
@@ -27,6 +27,7 @@
           {{#if hasDeployed}}
             <button class="btn btn-success form-control" {{action 'reload'}}>Deployment successful!</button>
           {{/if}}
+          <button class="form-control btn btn-danger" {{action 'publishUpdate'}}>Make 'em Reload!</button>
         </div>
       </div>
     </div>
