Hook up sort selector

--- a/app/assets/javascripts/templates/filterAnime.hbs
+++ b/app/assets/javascripts/templates/filterAnime.hbs
@@ -28,6 +28,7 @@
     </button>
 
     {{view "select" class="pull-right form-control filter-page-sort"
+       value=selectSort
        content=filterSorts
        optionValuePath="content.value"
        optionLabelPath="content.name"}}
