--- a/app/assets/javascripts/templates/user.hbs
+++ b/app/assets/javascripts/templates/user.hbs
@@ -52,10 +52,10 @@
               {{!-- <div {{bind-attr class=":edit-bio-chars bioCharsLeft:hasleft:noleft"}}>
                 {{bioCharCounter}} left
               </div> --}}
-              {{{textarea class="edit-bio" rows="2" maxlength="140" placeholder="Briefly tell us about yourself..." value=miniBio140}}}
+              {{{textarea class="edit-bio" rows="2" maxlength="140" placeholder="Briefly tell us about yourself..." value=truncatedBio}}}
             {{else}}
               <p class="user-bio">
-                {{miniBio140}}
+                {{truncatedBio}}
               </p>
             {{/if}}
           </div>
