Fixed gradient blur for Firefox V2

--- a/app/assets/javascripts/templates/user.hbs
+++ b/app/assets/javascripts/templates/user.hbs
@@ -11,7 +11,7 @@
     </div>
     <div class="cover-overlay-wrapper">
       <div class="dark-overlay"></div>
-      <div class="cover-overlay" {{bind-attr style=coverImageStyle}}></div>
+      <div class="cover-overlay" {{bind-attr style=coverImageOverlayStyle}}></div>
     </div>
     <svg height="0">
       <filter id="blur">
