Fix cover on following/follower pages

--- a/app/assets/stylesheets/base/layout.css.scss
+++ b/app/assets/stylesheets/base/layout.css.scss
@@ -653,6 +653,7 @@ html { overflow-y: auto; }
     .cover-photo {
       background-size: cover;
       background-position: center center;
+      height: 100px;
     }
   }
 
