Rename miniBio140 => truncatedBio

--- a/app/assets/javascripts/templates/user/index.hbs
+++ b/app/assets/javascripts/templates/user/index.hbs
@@ -25,7 +25,7 @@
               {{bioCharCounter}} left
             </div>
 
-            {{{textarea class="edit-bio" rows="4" placeholder="Tell us about yourself  :3" value=user.miniBio140}}} --}}
+            {{{textarea class="edit-bio" rows="4" placeholder="Tell us about yourself  :3" value=user.truncatedBio}}} --}}
             <div class="user-interests">
               <ul>
                 <li>
@@ -49,7 +49,7 @@
               </ul>
             </div>
           {{else}}
-            {{!-- <p class="about"> {{user.miniBio140}}</p> --}}
+            {{!-- <p class="about"> {{user.truncatedBio}}</p> --}}
             <div class="user-interests">
               <ul>
                 <li>
