Word-break for people sleeping on the keyboard in chat

--- a/app/assets/stylesheets/partials/chat.css.scss
+++ b/app/assets/stylesheets/partials/chat.css.scss
@@ -102,6 +102,7 @@
           background: #fff;
           border-left: 1px solid #E7E9EF;
           padding: 5px 15px;
+          word-break: break-word;
           @media (max-width: 768px) {
             width: 65%;
           }
