Uniform styling of buttons on iOS devices
Removes default styling of buttons on iOS devices (rounded corners, gradient)

--- a/public/old-application.css
+++ b/public/old-application.css
@@ -19653,6 +19653,7 @@ body .ui-tooltip {
   padding: 0;
   -o-border-radius: 2px;
   border-radius: 2px;
+  webkit-appearance: none;
 }
 
 .login-register-card .login-button:hover,.login-register-card .fb-button:hover {
