Spacing for the "Forgot your password?" link
Added some spacing above as well

--- a/public/old-application.css
+++ b/public/old-application.css
@@ -19678,7 +19678,7 @@ body .ui-tooltip {
 
 .login-register-card .password-reset {
   text-align: center;
-  margin-bottom: 30px;
+  margin: 30px 0;
 }
 
 .login-register-card .social-buttons {
