--- a/app/assets/stylesheets/partials/user-index.css.scss
+++ b/app/assets/stylesheets/partials/user-index.css.scss
@@ -3,9 +3,13 @@
 }
 
 .profile-navigation {
-  background: #f5f5f5;
+  background: none;
+  height: 60px;
   margin-bottom: 20px;
-  border-bottom: 1px solid #ddd;
+  margin-top: -60px;
+  position: relative;
+  background: rgba(0,0,0,0.7);
+  z-index: 3;
 
   .inline-list {
     text-align: left;
@@ -15,26 +19,26 @@
     .nav-link {
       float: none;
       padding: 10px 0 10px 0;
-      border-right: 1px solid #ddd;
-      &:first-child {
-        border-left: 1px solid #ddd;
-      }
 
       > a {
-        padding: 20px;
-        font-family: $bodyFontFamily;
-        font-size: 16px;
-        font-weight: 300;
-        color: #8d8d8d;
+        padding: 5px 15px;
+        font-family: $headerFontFamily;
+        font-size: 18px;
+        color: #7f7f7f;
+        color: rgba(255,255,255,0.6);
         position: relative;
         transition: .2s ease-in;
+        border-radius: 3px;
+        height: 29px;
 
         &.active {
-          color: $darkOrange;
+          color: #fff;
+          background: rgba(255,255,255,0.2);
         }
 
         &:hover {
-          color: $darkOrange;
+          color: #fff;
+          background: rgba(255,255,255,0.1);
         }
       }
     }
