Update background positioning to be centered again

--- a/app/assets/stylesheets/partials/user-cover-image.css.scss
+++ b/app/assets/stylesheets/partials/user-cover-image.css.scss
@@ -6,7 +6,7 @@
   .cover-photo {
     background-size: cover;
     background-repeat: no-repeat;
-    background-position: right;
+    background-position: center;
     height: 400px;
     width: 100%;
     position: relative;
