Limit bio and about section lengths.

--- a/app/assets/javascripts/templates/search.hbs
+++ b/app/assets/javascripts/templates/search.hbs
@@ -8,7 +8,7 @@
         {{input value=query class="form-control" placeholder="I'm sure there's something interesting to find here!"}}
       </div>
       <div class="col-md-3">
-        {{view Ember.Select class="form-control" content=filters selectionBinding=filter}}
+        {{view "select" class="form-control" content=filters selectionBinding=filter}}
       </div>
     </form>
     <hr />
