Hook up onboarding rating system selection.

--- a/app/assets/javascripts/templates/onboarding.hbs
+++ b/app/assets/javascripts/templates/onboarding.hbs
@@ -1,2 +1,9 @@
-<h1>Onboarding</h1>
-{{outlet}}
+<div class="row" style="margin-top: 100px">
+  <div class="col-xs-6 col-xs-offset-3">
+    <div class="panel panel-default">
+      <div class="panel-body">
+        {{outlet}}
+      </div>
+    </div>
+  </div>
+</div>
