--- a/app/assets/javascripts/templates/onboarding/start.hbs
+++ b/app/assets/javascripts/templates/onboarding/start.hbs
@@ -1,2 +1,15 @@
-<h1>Start</h1>
-{{#link-to 'onboarding.rating-system'}}Continue{{/link-to}}
+<div class="row">
+  <div class="col-xs-6">
+    <h3>You've made a great decision.</h3>
+
+    <p>Hummingbird is a social network for sharing your taste in anime and manga. See what your friends have been enjoying, track what you've seen or read and get personalized recommendations.</p>
+
+    <p>Let's take a few moments to personalize your account, you beautiful bastard.</p>
+
+    <p style='margin-top: 20px'>{{#link-to 'onboarding.rating-system' class='btn btn-primary'}}Continue{{/link-to}}</p>
+  </div>
+
+  <div class="col-xs-6">
+    <img src="http://i.imgur.com/Em9Mus5.png" style="width: 100%">
+  </div>
+</div>
